# KTrayMorph

./: .gitignore  CMakeLists.txt  README.md  install.sh
docs/: roadmap.md  status.md
plasmoid/: CMakeLists.txt
plasmoid/package/: metadata.json
plasmoid/package/contents/config/: config.qml  main.xml
plasmoid/package/contents/ui/: configGeneral.qml  main.qml
src/: CMakeLists.txt  dump_sni.cpp  livereplacementcontroller.cpp  livereplacementcontroller.h  logging.cpp  logging.h  ruleengine.cpp  ruleengine.h  statusnotifierscanner.cpp  statusnotifierscanner.h  trayitem.h  trayitemmodel.cpp  trayitemmodel.h
